{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 85,
  "lineage": "79b01ee1-1b40-c2be-8efa-93113056aa22",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "web-vm-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/web-vm-public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.199.186.40",
            "ip_version": "IPv4",
            "location": "switzerlandnorth",
            "name": "web-vm-public_ip",
            "resource_group_name": "terraform-rg",
            "sku": "Standard",
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db-vm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkInterfaces/db-vm-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/private-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "switzerlandnorth",
            "mac_address": "70-A8-A5-06-50-B6",
            "name": "db-vm-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "terraform-rg",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Compute/virtualMachines/db-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private-subnet",
            "azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "monitoring-vm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkInterfaces/monitoring-vm-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/private-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "switzerlandnorth",
            "mac_address": "7C-ED-8D-44-60-D2",
            "name": "monitoring-vm-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "terraform-rg",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Compute/virtualMachines/monitoring-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private-subnet",
            "azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-vm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkInterfaces/web-vm-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/web-vm-public_ip",
                "subnet_id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/public-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "switzerlandnorth",
            "mac_address": "7C-ED-8D-43-8D-98",
            "name": "web-vm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "terraform-rg",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Compute/virtualMachines/web-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.web-vm-public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.public-subnet",
            "azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "location": "switzerlandnorth",
            "name": "private-nsg",
            "resource_group_name": "terraform-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3000",
                  "5432",
                  "9090",
                  "9100"
                ],
                "direction": "Inbound",
                "name": "private-nsr",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/public-nsg",
            "location": "switzerlandnorth",
            "name": "public-nsg",
            "resource_group_name": "terraform-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "80"
                ],
                "direction": "Inbound",
                "name": "public-nsr",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "9100"
                ],
                "direction": "Inbound",
                "name": "allow-monitoring-node-exporter",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.5",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-monitoring-node-exporter",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "9100"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/public-nsg/securityRules/allow-monitoring-node-exporter",
            "name": "allow-monitoring-node-exporter",
            "network_security_group_name": "public-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "terraform-rg",
            "source_address_prefix": "10.0.2.5",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.public-nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "private-nsr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.2.0/24"
            ],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "3000",
              "5432",
              "9090",
              "9100"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/private-nsg/securityRules/private-nsr",
            "name": "private-nsr",
            "network_security_group_name": "private-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraform-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.1.0/24"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.private-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.private-subnet",
            "azurerm_subnet.public-subnet",
            "azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "public-nsr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/public-nsg/securityRules/public-nsr",
            "name": "public-nsr",
            "network_security_group_name": "public-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraform-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.public-nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web-vm-public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/web-vm-public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.199.186.40",
            "ip_version": "IPv4",
            "location": "switzerlandnorth",
            "name": "web-vm-public_ip",
            "resource_group_name": "terraform-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/private-subnet",
            "name": "private-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "terraform-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/public-subnet",
            "name": "public-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "terraform-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/private-subnet",
            "network_security_group_id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "subnet_id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/private-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.private-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.private-subnet",
            "azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/public-subnet",
            "network_security_group_id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/public-nsg",
            "subnet_id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/public-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.public-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.public-subnet",
            "azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2e4e859f-8260-4603-a0a4-21c13c1f7e29",
            "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet",
            "location": "switzerlandnorth",
            "name": "terraform-vnet",
            "resource_group_name": "terraform-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/public-subnet",
                "name": "public-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/public-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/private-subnet",
                "name": "private-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/493004f2-0607-4c80-916d-76bf0dd099ef/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/private-nsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}